k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: wordcannon
spec:
  replicas: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app: word-generator-app
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: word-generator-app
    spec:
      containers:
        - name: word-generator-container
          image: wordcannon/word-generator:0.0.11
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 250Mi
