k8s/fancy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fancy
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fancy
  template:
    metadata:
      labels:
        app: fancy
        tier: backend
    spec:
      containers:
      - name: app
        image: wordcannon/fancy
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        ports:
            - containerPort: 8080
