k8s/frontend-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordcannon-frontend
  namespace: production
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordcannon-frontend
        tier: frontend
    spec:
      containers:
      - name: web
        image: wordcannon/web
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
