k8s/punctuation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: punctuation
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: punctuation
  template:
    metadata:
      labels:
        app: punctuation
        tier: backend
    spec:
      containers:
      - name: app
        image: wordcannon/punctuation
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        ports:
            - containerPort: 8080
