k8s/word-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: word
  template:
    metadata:
      labels:
        app: word
        tier: backend
    spec:
      containers:
      - name: app
        image: wordcannon/word
        imagePullPolicy: Always
        ports:
            - containerPort: 8080
