k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: wordcannon-backend
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
