k8s/dictionary-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dictionary
  namespace: production
spec:
  selector:
    app: dictionary
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    name: http
