k8s/fancy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fancy
  namespace: production
spec:
  selector:
    app: fancy
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    name: http
