k8s/public-service.yml
apiVersion: v1
kind: Service
metadata:
  name: public-frontend
spec:
  selector:
    app: wordcannon-frontend
    tier: frontend
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
  type: LoadBalancer
