k8s/punctuation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: punctuation
  namespace: production
spec:
  selector:
    app: punctuation
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    name: http
