k8s/word-service.yml
apiVersion: v1
kind: Service
metadata:
  name: word
  namespace: production
spec:
  selector:
    app: word
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    name: http
