k8s/wordcannon-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordcannon-gateway
  namespace: production
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordcannon
  namespace: production
spec:
  hosts:
  - "*"
  gateways:
  - wordcannon-gateway
  http:
  - match:
    - uri:
        exact: /wordcannon
    route:
    - destination:
        host: frontend
        port:
          number: 8888
